manifest/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: django
  namespace: default
  labels:
    app: django
spec:
  selector: 
    matchLabels:
      app: django
  # replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: django
    spec:  
      containers:
        - name: django
          image: registry.git.vmo.dev/c11/c11-private/devops/reactjs-devops-lab:296a4413
          ports:
            - name: http
              containerPort: 8000
          resources:
            limits:
              # cpu: 1
              # memory: 1Gi
              cpu: 500m
              memory: 500Mi
            requests:
              # cpu: 750m  
              # memory: 750Mi
              cpu: 250m
              memory: 250Mi
      imagePullSecrets:
        - name: registrypullsecret
