manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: default
  labels:
    app: django
spec:
  selector:
    app: django
  ports:
    - name: web
      protocol: TCP
      port: 8000
      targetPort: http
  type: LoadBalancer
